--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,8 @@
     <string name="login_page">Login</string>
     <string name="registration_page">Registration</string>
     <string name="story_page">Story</string>
-    <string name="new_story_page">New Story</string>
-    <string name="settings_page">Settings</string>
     <string name="auth_page">Authentication</string>
-    <string name="desc_failed">Failed cause something.</string>
+    <string name="desc_failed">Failed cause something</string>
     <string name="desc_tab">Tab layout for login and registration page</string>
     <string name="hint_name">Name</string>
     <string name="hint_password">Password</string>
@@ -14,11 +12,10 @@
     <string name="error_name">Please fill your name</string>
     <string name="error_email">Your email is invalid</string>
     <string name="error_password">Password must be greater than or equal to 8</string>
-    <string name="add_news">Add news</string>
+    <string name="add_story">Add story</string>
     <string name="change_language">Change language</string>
     <string name="logout">Logout</string>
     <string name="success_logout">Logout successfully</string>
-    <string name="loading">Loading</string>
     <string name="story_name">Story name</string>
     <string name="story_desc">Story description</string>
     <string name="reload">Reload</string>
@@ -26,11 +23,13 @@
     <string name="desc_add">Description</string>
     <string name="add_photo">Add photo</string>
     <string name="file_null">File is null</string>
-    <string name="invalid_desc_add_photo">Description is invalid</string>
     <string name="take_photo">Take a Photo</string>
     <string name="choose_gallery">Choose from Gallery</string>
     <string name="select_option">Select Option</string>
     <string name="cancel">Cancel</string>
     <string name="choose_picture">Choose a Picture</string>
     <string name="not_get_permission">not getting permissions</string>
+    <string name="please_wait">Please wait a moment …</string>
+    <string name="empty_text">NO DATA</string>
+    <string name="empty_desc">No description</string>
 </resources>
